# rascode

./: .gitignore  README.md  pyproject.toml
.cursor/: mcp.json
.cursor/skills/: README.md
docs/: display-daemon.md  mcp-config.example.json  setup-mcp-and-skills.md  troubleshooting-lcd.md
docs/skills/rascode-triple-screen/: SKILL.md
scripts/: run_dashboard.py  run_dev.py  run_main_screen.py  run_triple_screen.py  test_main_screen.py
src/rascode/: __init__.py  display_backend.py
src/rascode/config/: __init__.py  base.py
src/rascode/core/: __init__.py  app.py
src/rascode/hardware/: __init__.py
src/rascode/hardware/display/: __init__.py  base.py  lcd_hat_main.py  oled_dual.py
src/rascode/mcp/: __init__.py  server.py
src/rascode/services/: __init__.py  monitoring.py  network_info.py
src/rascode/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py  test_config_base.py  test_mcp_server.py  test_monitoring.py  test_network_info.py
