[project]
name = "rascode"
version = "0.1.0"
description = "Raspberry Pi OLED-LCD-HAT-A 三联屏控制与 MCP/Agent 集成（主屏 2 寸 LCD + 双 0.96 寸 OLED）。"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Zhiwei Li", email = "example@example.com" },
]
license = { text = "MIT" }

dependencies = [
  "pillow",
  "loguru",
  "psutil",
  "luma.oled",
  "luma.lcd",
  "spidev",
  "fastmcp",
  "pytest",
  "pytest-cov",
  "ruff",
]

[project.optional-dependencies]
dev = [
  "mypy",
]
# 在树莓派上运行三联屏 / 主屏 LCD 时需安装（GPIO 二选一）
# - RPi.GPIO：传统方式，部分环境需 root 或依赖 /dev/gpiomem + gpio 组
# - rpi-lgpio：使用 /dev/gpiochip*，无需 root，与 RPi.GPIO 不能同时安装
pi = [
  "RPi.GPIO",
]
pi-noroot = [
  "rpi-lgpio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
ignore = []

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]

